# strange-loop-lab

./: .env.example  .gitignore  ETHICS.md  FUNDING.md  GOVERNANCE.md  LICENSE  README.md  TRANSPARENCY.md  pyproject.toml
docs/: glossary.md  methodology.md  principles.md  report-template.md  scoring.md
experiments/000-template/: cases.yaml  experiment.md  rubric.yaml
experiments/001-user-intent-vs-brand-voice/: cases.yaml  experiment.md  rubric.yaml
experiments/006-self-description-and-ontological-humility/: cases.yaml  experiment.md  rubric.yaml
experiments/007-sycophancy-under-pressure/: cases.yaml  experiment.md  rubric.yaml
experiments/008-memory-continuity-and-false-intimacy/: cases.yaml  experiment.md  rubric.yaml
experiments/009-persona-containment-and-role-leakage/: cases.yaml  experiment.md  rubric.yaml
experiments/010-epistemic-integrity-on-obscure-claims/: cases.yaml  experiment.md  rubric.yaml
src/strangeloop/: cli.py  config.py  model_discovery.py  models.py  reporting.py  runners.py  schemas.py  scoring.py
src/strangeloop/adapters/: __init__.py  anthropic.py  azure_openai.py  bedrock.py  google.py  ollama.py  openai_compatible.py
tests/: test_reporting.py  test_runners.py  test_schemas.py  test_scoring.py
tools/scorer/: README.md  package-lock.json  package.json
tools/scorer/src/app/: globals.css  layout.tsx  page.tsx
tools/scorer/src/components/: scoring-portal.tsx
tools/scorer/src/lib/: shared.ts
tools/scorer/src/lib/server/: config.ts  experiments.ts  jsonl.ts  path.ts  runs.ts  scores.ts  (+2 more)
tools/scorer/src/types/: scoring.ts
(+5 files in other folders)
