[project]
name = "strange-loop-lab"
version = "0.2.0"
description = "Independent, reproducible studies of AI model and agent behavior"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
strangeloop = "strangeloop.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
